[gd_scene load_steps=14 format=2]

[ext_resource path="res://models/Caterham/caterham.gltf" type="PackedScene" id=1]
[ext_resource path="res://scripts/car/Car.gd" type="Script" id=2]
[ext_resource path="res://scripts/car/WheelController.gd" type="Script" id=3]
[ext_resource path="res://sounds/Electric_Motor.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/car/caterham/LightControler.gd" type="Script" id=5]
[ext_resource path="res://scripts/car/controls/ControlHandlers.gd" type="Script" id=6]
[ext_resource path="res://scripts/car/controls/PlayerHandler.gd" type="Script" id=8]
[ext_resource path="res://scripts/car/MotorController.gd" type="Script" id=9]
[ext_resource path="res://scripts/car/GearController.gd" type="Script" id=10]
[ext_resource path="res://scenes/car/caterham/motor_torque_curve.tres" type="Curve" id=11]
[ext_resource path="res://scripts/car/CarNetworkSync.gd" type="Script" id=12]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.884512, 0.451341, 1.65455 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.466667, 0.0509804, 0.0509804, 1 )
roughness = 0.69

[node name="Caterham" instance=ExtResource( 1 )]
mass = 58.6735
continuous_cd = true
script = ExtResource( 2 )
MAX_STEER_ANGLE = 0.5
ENGINE_MAX_RPM = 8000
gear_ratios = PoolRealArray( -7, 0, 5, 2.8, 1.9, 1.4, 1 )
torque_curve = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631, 0 )
shape = SubResource( 1 )

[node name="backlights" parent="." index="1"]
material_override = SubResource( 2 )

[node name="Lamp" parent="." index="6"]
visible = false

[node name="left_front" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, 0.856, 0.37, 1.275 )
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.32
wheel_rest_length = 0.07
suspension_travel = 0.05
suspension_stiffness = 150.0
suspension_max_force = 2000.0
damping_compression = 0.8
damping_relaxation = 0.8

[node name="left_front" parent="left_front" index="0"]
transform = Transform( 0.0254, 0, 0, 0, 0.0254, 0, 0, 0, 0.0254, 0, 0, 0 )

[node name="left_rear" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, 0.935, 0.37, -1.255 )
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.32
wheel_rest_length = 0.07
wheel_friction_slip = 9.0
suspension_travel = 0.05
suspension_stiffness = 130.0
suspension_max_force = 2000.0
damping_compression = 0.6
damping_relaxation = 0.6

[node name="left_rear" parent="left_rear" index="0"]
transform = Transform( 0.0254, 0, 0, 0, 0.0254, 0, 0, 0, 0.0254, 0, 0, 0 )

[node name="right_front" parent="." index="9"]
transform = Transform( 1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, -0.856, 0.37, 1.275 )
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.32
wheel_rest_length = 0.07
suspension_travel = 0.05
suspension_stiffness = 150.0
suspension_max_force = 2000.0
damping_compression = 0.8
damping_relaxation = 0.8

[node name="right_front" parent="right_front" index="0"]
transform = Transform( 0.0254, 0, 0, 0, 0.0254, 0, 0, 0, 0.0254, 0, 0, 0 )

[node name="right_rear" parent="." index="10"]
transform = Transform( 1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, -0.935, 0.37, -1.255 )
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.32
wheel_rest_length = 0.07
wheel_friction_slip = 9.0
suspension_travel = 0.05
suspension_stiffness = 130.0
suspension_max_force = 2000.0
damping_compression = 0.6
damping_relaxation = 0.6

[node name="right_rear" parent="right_rear" index="0"]
transform = Transform( 0.0254, 0, 0, 0, 0.0254, 0, 0, 0, 0.0254, 0, 0, 0 )

[node name="ControlHandlers" type="Node" parent="." index="12"]
script = ExtResource( 6 )

[node name="PlayerHandler" type="Node" parent="ControlHandlers" index="0"]
script = ExtResource( 8 )
gear_path = NodePath("../../GearController")

[node name="WheelController" type="Node" parent="." index="13"]
script = ExtResource( 3 )

[node name="GearController" type="Node" parent="." index="14"]
script = ExtResource( 10 )
gear_ratios = PoolRealArray( -7, 0, 5, 2.5, 1.8, 1.4, 1 )

[node name="MotorController" type="Node" parent="." index="15"]
script = ExtResource( 9 )
gear_controller_path = NodePath("../GearController")
wheel_controller_path = NodePath("../WheelController")
torque_curve = ExtResource( 11 )

[node name="Tween" type="Tween" parent="MotorController" index="0"]

[node name="LightController" type="Node" parent="." index="16"]
script = ExtResource( 5 )

[node name="CarNetworkSync" type="Node" parent="." index="17"]
script = ExtResource( 12 )
motor_controller_path = NodePath("../MotorController")
gear_controller_path = NodePath("../GearController")
wheel_controller_path = NodePath("../WheelController")

[node name="Timer" type="Timer" parent="CarNetworkSync" index="0"]
wait_time = 0.1
autostart = true

[node name="MotorSound" type="AudioStreamPlayer3D" parent="." index="18"]
stream = ExtResource( 4 )
autoplay = true
bus = "Effects"
doppler_tracking = 2

[node name="MotorTween" type="Tween" parent="." index="19"]
[connection signal="brake_changed" from="." to="LightController" method="_on_Caterham_brake_changed"]
[connection signal="timeout" from="CarNetworkSync/Timer" to="CarNetworkSync" method="sync_vehicule"]
